# crypto-arbitrage-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: api.py  arbitrager.py  main.py  socket.py  utils.py
app/service/: arbitrage_calculator.py  order_book.py
app/socket/: market_rate.py
